@@ -53,7 +53,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 ProjDir=.
 SOURCE="$(InputPath)"
-PostBuild_Cmds=move               $(ProjDir)\gdcm.py               $(ProjDir)\..\ 
+PostBuild_Cmds=move                $(ProjDir)\gdcm.py                $(ProjDir)\..\ 
 # End Special Build Tool
 # Begin Target
 
@@ -109,10 +109,6 @@ SOURCE=..\..\src\gdcmFile.cxx
 # Begin Source File
 
 SOURCE=..\..\src\gdcmHeader.cxx
-# End Source File
-# Begin Source File
-
-SOURCE=..\..\src\gdcmHeaderIdo.cxx
 # End Source File
 # Begin Source File
 
