@@ -22,7 +22,6 @@ libgdcm_la_SOURCES=		\
 	gdcmDict.cxx      \
 	gdcmDictSet.cxx   \
 	gdcmElValSet.cxx  \
-	gdcmHeaderIdo.cxx \
 	gdcmFile.cxx	 \
 	gdcmVR.cxx	 \
 	gdcmTS.cxx	 \
