@@ -58,7 +58,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
 PostBuild_Desc=Copy for test
-PostBuild_Cmds=copy              ..\..\lib\gdcmdll.dll              ..\..\gdcmPython\          	copy              ..\..\lib\gdcmdll.dll              ..\..\test\          	copy           Release\gdcmdll.lib           ..\..\lib\ 
+PostBuild_Cmds=copy               ..\..\lib\gdcmdll.dll               ..\..\gdcmPython\           	copy               ..\..\lib\gdcmdll.dll               ..\..\test\           	copy            Release\gdcmdll.lib            ..\..\lib\ 
 # End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "gdcmdll - Win32 Debug"
@@ -90,7 +90,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
 PostBuild_Desc=Copy for test
-PostBuild_Cmds=copy              ..\..\lib\gdcmdll.dll              ..\..\gdcmPython\          	copy              ..\..\lib\gdcmdll.dll              ..\..\test\          	copy           Debug\gdcmdll.lib           ..\..\lib\ 
+PostBuild_Cmds=copy               ..\..\lib\gdcmdll.dll               ..\..\gdcmPython\           	copy               ..\..\lib\gdcmdll.dll               ..\..\test\           	copy            Debug\gdcmdll.lib            ..\..\lib\ 
 # End Special Build Tool
 
 !ENDIF 
@@ -137,10 +137,6 @@ SOURCE=..\gdcmHeader.cxx
 # Begin Source File
 
 SOURCE=..\gdcmHeaderHelper.cxx
-# End Source File
-# Begin Source File
-
-SOURCE=..\gdcmHeaderIdo.cxx
 # End Source File
 # Begin Source File
 
@@ -221,10 +217,6 @@ SOURCE=..\gdcmHeader.h
 # Begin Source File
 
 SOURCE=..\gdcmHeaderHelper.h
-# End Source File
-# Begin Source File
-
-SOURCE=..\gdcmIdo.h
 # End Source File
 # Begin Source File
 
