@@ -2,6 +2,7 @@
      * gdcmPython/testSuite.py : test the readable flag of file for tests
      * src/gdcmDict.cxx, gdcmElValSet.cxx : bug fix under windows for prints.
        It's lied to the stl compilation by MSVC (windows, always windows...)
+     * src/gdcmIdo.h, gdcmHeaderIdo.cxx : remove the Ido unused files
 
 2004-01-12 Benoit Regrain
      * src/*.h : add comments
